--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ joblib==1.5.1
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 kiwisolver==1.4.8
+llvmlite==0.44.0
 Mako==1.3.10
 MarkupSafe==3.0.2
 matplotlib==3.10.3
@@ -49,7 +50,8 @@ matplotlib-inline==0.1.7
 mlflow==3.1.1
 mlflow-skinny==3.1.1
 nest-asyncio==1.6.0
-numpy==2.3.1
+numba==0.61.2
+numpy==2.2.6
 opentelemetry-api==1.35.0
 opentelemetry-sdk==1.35.0
 opentelemetry-semantic-conventions==0.56b0
@@ -80,8 +82,10 @@ rsa==4.9.1
 scikit-learn==1.6.1
 scipy==1.16.0
 seaborn==0.13.2
+shap==0.48.0
 six==1.17.0
 sklearn-compat==0.1.3
+slicer==0.0.8
 smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.41
@@ -90,6 +94,7 @@ stack-data==0.6.3
 starlette==0.47.2
 threadpoolctl==3.6.0
 tornado==6.5.1
+tqdm==4.67.1
 traitlets==5.14.3
 typing-inspection==0.4.1
 typing_extensions==4.14.1
